# services/hierarchy/src/main/java/com/casemap/hierarchy/produce/ReviewActionRequest.java
@@ -1,0 +1,23 @@
+package com.casemap.hierarchy.produce;
+
+public class ReviewActionRequest {
+
+    private String operator;
+    private String comment;
+
+    public String getOperator() {
+        return operator;
+    }
+
+    public void setOperator(String operator) {
+        this.operator = operator;
+    }
+
+    public String getComment() {
+        return comment;
+    }
+
+    public void setComment(String comment) {
+        this.comment = comment;
+    }
+}
